# FL-Net-Sim

./: .gitignore  LICENSE  README.md  cache.md  orchestrator.py  requirements.txt
assets/: README.md  fl-results.csv  participation.csv
assets/fl-results/: client_1.csv  client_2.csv
configs/: README.md  lte.json  silo.json  wifi.json
experiments/: README.md
experiments/exp1_presets/: README.md  postprocessing.ipynb  run_experiment.sh
experiments/exp1_presets/configs/: lte_basic.json  lte_strong.json  lte_very_strong.json  lte_very_weak.json  lte_weak.json  silo_basic.json  silo_strong.json  silo_very_strong.json  silo_very_weak.json  silo_weak.json  wifi_basic.json  wifi_strong.json  wifi_very_strong.json  wifi_very_weak.json  wifi_weak.json
experiments/exp2_parallelism_ablation/: README.md  postprocessing.ipynb  run_experiment.sh
experiments/exp2_parallelism_ablation/configs/: baseline_no_unison_p1.json  parallelism20_no_unison.json  parallelism20_unison_t2.json  unison_auto_p1.json
experiments/exp3_redundancy_elimination/: README.md  postprocessing.ipynb  run_experiment.sh
experiments/exp3_redundancy_elimination/configs/: silo_parallelism20_unison_t2.json  wifi_parallelism20_unison_t2_strong.json
experiments/exp4_scalability_clients/: README.md  postprocessing.ipynb  run_experiment.sh
experiments/exp4_scalability_clients/configs/: wifi_c001_ap01.json  wifi_c002_ap01.json  wifi_c004_ap02.json  wifi_c008_ap03.json  wifi_c016_ap04.json  wifi_c032_ap05.json  wifi_c064_ap06.json  wifi_c128_ap07.json
ns3/: CMakeLists.txt  README.md  VERSION  ns3
ns3/build-support/: macros-and-definitions.cmake
ns3/build-support/custom-modules/: ns3-configtable.cmake
ns3/netanim/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  RELEASE_NOTES.md
ns3/netanim/src/: animxmlparser.cpp
ns3/scratch/: .gitignore
ns3/scratch/flsim/: CMakeLists.txt  README.md  lte.cc  silo.cc  wifi.cc
ns3/scratch/flsim/common/: utils.h
ns3/scratch/flsim/configs/: lte.json  silo.json  wifi.json
ns3/scratch/flsim/lte/: config.cc  config.h  net-builder.cc  net-builder.h  presets.cc  presets.h
ns3/scratch/flsim/silo/: config.cc  config.h  net-builder.cc  net-builder.h  presets.cc  presets.h
ns3/scratch/flsim/wifi/: config.cc  config.h  net-builder.cc  net-builder.h  presets.cc  presets.h
ns3/scripts/: build.sh  clean.sh  cleanup_records.sh  configure.sh
ns3/src/core/: CMakeLists.txt
ns3/src/core/model/: hash.h  object.cc  simple-ref-count.h
ns3/src/flow-monitor/model/: flow-monitor.cc  flow-monitor.h  ipv4-flow-classifier.h  ipv4-flow-probe.cc  ipv6-flow-classifier.h  ipv6-flow-probe.cc
ns3/src/internet/model/: global-route-manager-impl.cc  ipv4-global-routing.cc  ipv4-global-routing.h  ipv4-packet-info-tag.cc  ipv6-packet-info-tag.cc  tcp-option.cc
ns3/src/mpi/: CMakeLists.txt
ns3/src/mpi/examples/: CMakeLists.txt  fat-tree-hybrid.cc  fat-tree-mpi.cc
ns3/src/mpi/model/: granted-time-window-mpi-interface.cc  granted-time-window-mpi-interface.h  hybrid-simulator-impl.h  mpi-interface.cc
ns3/src/mtp/examples/: fat-tree-mtp.cc
ns3/src/mtp/model/: logical-process.cc  logical-process.h  mtp-interface.h  multithreaded-simulator-impl.cc  multithreaded-simulator-impl.h
ns3/src/network/model/: buffer.cc  buffer.h  byte-tag-list.cc  node.cc  node.h  packet-metadata.cc  packet-metadata.h  packet-tag-list.h
ns3/src/nix-vector-routing/model/: nix-vector-routing.cc  nix-vector-routing.h
utils/: __init__.py  cache.py  config.py  hashing.py  orchestration.py  records.py  reporting.py
